hasura/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hasura
    hasuraService: custom
  name: hasura
  namespace: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hasura
    spec:
      containers:
      - image: 10.235.9.36:30002/library/hasura/graphql-engine:v2.1.1
        imagePullPolicy: IfNotPresent
        name: hasura
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      nodeSelector:
        node-role.kubernetes.io/edge: worker
      tolerations:
        - key: "node-role.kubernetes.io/edge"
          operator: "Exists"
          effect: "NoSchedule"
