hasura/hasura-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasura
  name: hasura
  namespace: front
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    # nodePort: 30010
  selector:
    app: hasura
